cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_incomplete_if_directives.cpp.clank.err
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_incomplete_if_directives.cpp:1:5: error: expected value in expression
#if 
   ^
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_incomplete_if_directives.cpp:3:6: error: expected value in expression
#elif
    ^
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_incomplete_if_directives.cpp:7:7: error: macro name missing
#ifdef
     ^
/export/devarea/cnd-main/cnd.modelimpl/build/test/unit/data/org/netbeans/modules/cnd/modelimpl/trace/FileModel3Test/preproc_incomplete_if_directives.cpp:11:9: error: macro name missing
#ifndef 
       ^
